# cncr

./: .gitignore  Dockerfile  Jenkinsfile  README.md  build.sh  build_stage.sh  docker_build.sh  docker_build_push.sh
src/stage_ros_wrapper/: CMakeLists.txt  package.xml
src/stage_ros_wrapper/src/: main.cpp  stage_ros_wrapper.cpp  stage_ros_wrapper.h
src/stage_simulator/: CMakeLists.txt  package.xml
src/stage_simulator/launch/: simulator.launch
src/stage_simulator/world/: raccoon_002.world  tergeo.world  zz01a.world
src/stage_simulator/world/obstacles/: cube_obstacle.inc
src/stage_simulator/world/robots/: carlike_robot.inc
stage/: CMakeLists.txt
stage/libstage/: CMakeLists.txt  model.cc  model_position.cc  stage.hh
tergeo/app/: tergeo  tergeo_gui  tergeo_multi  tergeo_qt_core
tergeo/bash/: start_control.sh  start_guardian.sh  start_localization.sh  start_map.sh  start_monitor.sh  start_multi_modules.sh  start_perception.sh  start_planning.sh  start_prediction.sh  start_simulator.sh  start_tergeo_gui.sh  start_tergeo_server.sh  start_vehicle.sh
tergeo/conf/: vehicle_info.conf  vehicle_type.conf  vehicle_type_tergeo.conf
tergeo/conf/example/test_command_module/: module.conf
tergeo/conf/modules/: control_module.conf  guardian_module.conf  localization_module.conf  map_module.conf  monitor_module.conf  multi_module.conf  perception_module.conf  planning_module.conf  prediction_module.conf  tergeo_gui_module.conf  vehicle_module.conf
tergeo/include/planning_algorithm/coverage_planners/: base_coverage_planner.h  coverage_planner_factory.h
tergeo/include/planning_algorithm/smoother/: cubic_spline_smoother.h  slide_window_smoother.h
tergeo/include/planning_algorithm/speed_generator/: speed_generator.h
tergeo/include/tergeo/adapter/: publisher.h  ros_adapter_manager.h  ros_timer.h  service_adapter.h  topic_adapter.h
tergeo/map_data/areas/: corridor-0.area  corridor-1.area  gongzhongroad.area  gongzhongroad.tfw  lobby-1.area  map.area  map.tfw  map.yaml  raster.tfw  test_f1.area  xietong_f1.area  xietong_f1.tfw  xietong_f4.area  xietong_f4.tfw  xietong_f4_zz01a.area  xietong_f4_zz01a.tfw
tergeo/map_data/pipelines/: default.list
tergeo/map_data/ref_lines/: constraint.ref_line  corridor-0.ref_line  corridor-1.ref_line  line0.ref_line  lobby-0.ref_line  lobby-1.ref_line
(+1550 files in other folders)
