<?xml version="1.0"?>
<package>
  <name>stage_simulator</name>
  <version>0.0.0</version>
  <description>The stage_simulator package</description>

  <maintainer email="todo@todo.todo">todo</maintainer>
  <author email="todo@todo.todo">todo</author>

  <license>todo</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
